Closed Bug 1222352 Opened 9 years ago Closed 9 years ago

Resource Timing - nextHopProtocol does not work in e10s

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
e10s - ---
firefox45 --- fixed

People

(Reporter: valentin, Assigned: valentin)

References

(Blocks 1 open bug)

Details

(Keywords: productwanted)

Attachments

(1 file)

      No description provided.
Can you give more information here?
Flags: needinfo?(valentin.gosu)
The problem is that mSecurityInfo in HttpChannelChild doesn't QI to nsISSLSocketControl, so we can't get the negotiated NPN token from that. Instead we use the protocol version from the response head, which is always http/1.1 for e10s.
I need to pass it from the parent to the child channel.
Flags: needinfo?(valentin.gosu)
Attachment #8691071 - Flags: review?(hurley) → review+
https://hg.mozilla.org/mozilla-central/rev/1e426f4d6f36
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: