Bug 1222352 - Resource Timing - nextHopProtocol does not work in e10s r=nwgh